--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,9 @@
 node_modules
 
 # ApiKey Files
-server/api_key.txt
-server/api_secret.txt
+#server/api_key.txt
+#server/api_secret.txt
 
 # Folders
 data
+build
